assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap');
/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,100&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,200&display=swap');
/* @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;1,200&family=Poppins&display=swap'); */

/* colors 
#fff9ec - off white
#c2b697 - goldish / #dad0b9
#1b3d2f - green
#a78f18 - yellow
91c0b7 - blue
#8433e - red
#grey - rgb(168,169,172) 
charcoal - rgba(38, 37, 40, 1)
*/

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    font-family: 'Nunito', sans-serif;
    font-size: 16px;
    height:100%;
    min-height:100%;
    height:auto !important;
    margin: 0 10px 0 10px;
    margin:0 auto;
}

hr {
    border: 1px solid rgb(38, 37, 40);
    width: 30%;
    margin: 0 auto;
    margin-bottom: 20px;
}

h1, h2, h3 {
    font-family: 'Relay', sans-serif;
    font-weight: 200;
    padding: 10px;
    margin-bottom: 20px;
    font-size: 1.5rem;
    font-variant: small-caps;
    text-align: center;
}

h4 {
    font-size: 18px;
    color: rgb(38, 37, 40);
    margin: 0 20px 0 20px;
    text-align: left;
    text-decoration: none;
    background-color: rgba(167, 143, 24, 0.5);
}

.intext-link {
    color: #a78f18;
    text-decoration: none;
    font-weight: 800;
}

/* _____header */

#header-container {
    display: flex;
    flex-direction: row;
    float: left;
    background-color: rgb(168,169,172);
    width: 100%;
}

#logo {
    background: url("https://domusmeafinance.co.uk/wp-content/uploads/2019/07/logo-60.png") no-repeat center center;
    height: 60px;
    width: 40%;
    margin-top: 150px;
    margin-right: 2%;
}

#hero-image {
    background: url("../images/pexels-moose-photos-1037912_resized\ for\ site.jpg") no-repeat top center;
    height: 300px;
    width: 70%;
}

#tagline {
    color: #fff9ec;
    height: 30px;
    padding-top: 10px;
    font-size: 16px;
}

/* _____navigation menu */

.longbar {
    background: #262528;
    color: #fff9ec;
    height: 2.5em;
    border-top: 2px solid #fff9ec;
    border-bottom: 2px solid #fff9ec;
    padding: 2px;
    clear: both;
    margin: 0 auto;
    position: relative;
}

.longbar a {
    text-decoration: none;
    color: #fff9ec;
    font-size: 20px;
    font-weight: 400;
    text-align: center;
    padding: 5px;
    margin: 30px;
    font-variant: small-caps;
}

#menu ul {
    width: 100%;
    text-align: center;
    margin-top: 8px;
    position: relative; 
}

#menu li {
    display: inline-block;
    text-align: center;
}

.longbar a:hover {
    background-color: #84333e;
}

.active {
    background-color: #a78f18;
}

/* ______footer */

#footer {
    position: sticky;
    bottom: 0;
    color: rgb(182,183,186);
    height: 50px;
    padding-top: 10px;
}

#contact-large {
    display: flex;
    flex-direction: row-reverse;
    clear: both;
}

#contact-small {
    display: none;
}

.footer-right {
     width: 33%;
     float: right;
     text-align: center;
     margin: 0 auto;
 }

.footer-left {
    width: 33%;
    float: left;
    text-align: center;
    margin:0 auto; 
}

.footer-center {
    width: 33%;
    text-align: center;
    margin: 0 auto;
}

/* footer social links */

.social-links {
    margin-top: 2px;
}

.social-links ul {
    display: inline-table;
    list-style-type: none;
}

.social-links li {
    display: inline-block;
}

.social-links a {
    color: rgb(182,183,186);
    padding: 10px;
    margin-top: 5px;
    margin: 20px;
    text-align: center;
}

/* home page */

section {
    padding: 20px; 
    clear: both;
}

section p {
    margin: 20px;
    text-align: left;
    clear: both;
}

/* about us */

.two-columns {
    /* column-count: 2; */
    display: flex;
    align-items: center;
    text-align: justify;
    column-gap: 20px;
    padding: 10px;
    width: 80%;
    margin: auto;
    box-shadow: 1px 1px 4px rgb(0 0 0 / 8%);
    border: 7px solid rgb(168,169,172,0.2);
}
.two-columns div {
    width: 50%;
}

.two-columns strong {
    background-color: rgba(167, 143, 24, 0.3);
    /* text-decoration: underline; */
    /* text-decoration-color: rgba(167, 143, 24); */
    /* text-decoration-style: double; */
}

#prot-d1 {
    width: 40%;
}

#prot-d2 {
    width: 60%;
}

.im-row {
    display: flex;
    flex-direction: row;
    width: 100%;
    float: left;
    clear: both;
    min-height: 300px;
}

.im-outer {
    width: 33%;
    border: 5px solid white;
    padding: 5px;
    clear: both;
    text-align: center;
}

.im-label:hover {
    color: #84333e;
}

/* services section */

.in-row-im {
    height: 250px;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

#service-img1 {
    background: url("../images/tierra-mallorca-JXI2Ap8dTNc-unsplash_resize_470x330.jpg") no-repeat center center;
}

#service-img2 {
    background: url("../images/marek-studzinski-ELXxMMSF_L8-unsplash-resized\ for\ site.jpg") no-repeat center center;
    
}

#service-img3 {
    background: url("../images/pexels-adrianna-calvo-17739_resized_470x330.jpg") no-repeat center center;
}

/* Why us - testimonies section */

#testimony-img1 {
    background: url("../images/pexels-kindel-media-7578931_resized.jpg") no-repeat center center;
}

#testimony-img2 {
    background: url("../images/pexels-mikhail-nilov-7735694_resized.jpg") no-repeat center center;
}

#testimony-img3 {
    background: url("../images/pexels-william-fortunato-resized.jpg") no-repeat center center;
}

.testimony-cont {
    background: rgba(38, 37, 40, 1);
    color: #fff9ec;
    font-style: italic;
    text-align: center;
    max-width: 450px;  
    margin: 0;
}

/* Professional bodies */

#logos {
    margin-left: 20px;
}
/* ... */

